Generate forum layout html files

--- a/Templates/IndexAfterHeader.html
+++ b/Templates/IndexAfterHeader.html
@@ -30,8 +30,8 @@
                         </ul>
                     </li>
                     <li class="toproot">
-                        <a id="sidebartoggle" style="height:37px;line-height:37px;"><span><i class="fa fa-user-circle"></i> Profile <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
-                        <ul id="side">
+                        <a id="sidebartoggle" style="height:20px;"><span><i class="fa fa-user-circle"></i> Profile <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <ul style="padding: 0 !important; -webkit-box-shadow: none !important; box-shadow: none !important; ">
                             <li>
                                 <div class="sidebar">
                                     <div class="component">
@@ -63,7 +63,7 @@
                                                 </div>
                                             </a>
                                         </div> <!--End Contents-->
-                                    </div>  <!--End Component-->
+                                    </div> <!--End Component-->
                                 </div> <!--End Sidebar-->
                             </li>
                         </ul>
