--- a/forum/styles/prolight/template/overall_footer.html
+++ b/forum/styles/prolight/template/overall_footer.html
@@ -1,10 +1,11 @@
-﻿								<!--Pagination-->
+								<!--Pagination-->
                                 </td>
 							</tr>
 						</table>
 					</div>
                 </td></tr></tbody></table>
-                <!--Footer-->
+                </div>
+<!--Footer-->
                 <div class="row bottom">
                     <footer>
                         <table style="padding-right: 2%;">
