Update 404, files, flowscript docs layouts

--- a/Templates/Flowscript/compiling.html
+++ b/Templates/Flowscript/compiling.html
@@ -1,32 +1,4 @@
-
-                <div class="content-outer">
-                    <div class="content"><br>
-						Basics
-						<br>↳ <a href="https://amicitia.github.io/docs/flowscript">Flowscript</a>
-						<br>↳ <a href="https://amicitia.github.io/docs/messagescript">Messagescript</a>
-						<br>↳ <a href="https://amicitia.github.io/docs/decompiling">Decompiling</a>
-						<br>↳ <a href="https://amicitia.github.io/docs/compiling">Compiling</a>
-						<br>
-						<br>Features
-						<br>↳ <a href="https://amicitia.github.io/docs/importing">Importing</a>
-						<br>↳ Declaring Functions
-						<br>↳ Declaring Variables
-						<br>↳ <a href="https://amicitia.github.io/docs/hookingfunctions">Hooking Functions</a>
-						<br>
-						<br>P5 Functions
-						<br>↳ AI
-						<br>↳ Common
-						<br>↳ Facility
-						<br>↳ Field
-						<br>↳ Net
-						<br>↳ Social
-					</div>
-				</div>
-			</td>
-			<td style="width: 75%; padding-right:20px; vertical-align: top;">
-				<div class="content-outer">
-                    <div class="content">
-						<h1>Compiling</h1>
+<h1>Compiling</h1>
 <br>Using <b>AtlusScriptCompiler</b>, you can turn <b>.flow</b> files into <b>.bf</b> files, or <b>.msg</b> files into <b>.bmd</b> files. Anything else referenced in a .flow (bf/bmd/flow/msg) also becomes part of a resulting .bf file.
 <br />
 <br />You can <a href="https://shrinefox.com?tool=atlusscriptcompiler">download the latest AtlusScriptCompiler here</a>.
@@ -99,3 +71,6 @@ There is an unofficial GUI for AtlusScriptCompiler that allows you to simply dra
 If a script has failed to compile, an error message should be shown. It will usually try to show the exact line number where the error occured so you can fix it, along with a description of what's wrong.
 <br />For a more visual guide on using AtlusScriptCompiler, see the video:
 <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/HonHDoSJNDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</td>
+		</tr>
+	</table>
