--- a/Templates/Flowscript/flowscript.html
+++ b/Templates/Flowscript/flowscript.html
@@ -1,43 +1,16 @@
-<div class="container body-content">
-	<table>
-        <tr>
-            <td width="25%" style="vertical-align:top">
-                <div class="content-outer">
-                    <div class="content"><br>
-						Basics
-						<br>↳ <a href="https://amicitia.github.io/docs/flowscript">Flowscript</a>
-						<br>↳ <a href="https://amicitia.github.io/docs/messagescript">Messagescript</a>
-						<br>↳ <a href="https://amicitia.github.io/docs/decompiling">Decompiling</a>
-						<br>↳ <a href="https://amicitia.github.io/docs/compiling">Compiling</a>
-						<br>
-						<br>Features
-						<br>↳ <a href="https://amicitia.github.io/docs/importing">Importing</a>
-						<br>↳ Declaring Functions
-						<br>↳ Declaring Variables
-						<br>↳ <a href="https://amicitia.github.io/docs/hookingfunctions">Hooking Functions</a>
-						<br>
-						<br>P5 Functions
-						<br>↳ AI
-						<br>↳ Common
-						<br>↳ Facility
-						<br>↳ Field
-						<br>↳ Net
-						<br>↳ Social
-					</div>
-				</div>
-			</td>
-			<td style="width: 75%; padding-right:20px; vertical-align: top;">
-				<div class="content-outer">
-					<div class="content">
-						<h1>Flowscript</h1><br><b>Flowscript</b> is a scripting language created by <b>TGEnigma</b> for use with his <a href="https://shrinefox.com/?tool=atlusscriptcompiler">AtlusScriptCompiler</a>. It is the decompiled form of <b>BF</b>, the binary output of Atlus's scripts which many of their games use to perform various logical procedures.
-						<br><h2>Decompiling</h2>
+<h1>Flowscript</h1>
+<br><b>Flowscript</b> is a scripting language created by <b>TGEnigma</b> for use with his <a href="https://shrinefox.com/?tool=atlusscriptcompiler">AtlusScriptCompiler</a>. It is the decompiled form of <b>BF</b>, the binary output of Atlus's scripts which many of their games use to perform various logical procedures.
+<br>
+<h2>Decompiling</h2>
 						You can convert <b>.BF</b> to <b>.FLOW</b> and open it with your text editor of choice <a href="https://amicitia.github.io/docs/decompiling">by following this guide</a>.
-						<br />Likewise, you can also convert <b>.BMD</b> to <b>.MSG</b> for easy reading and editing.
-						<br />If you're looking for a full dump of P5's scripts for reference, <a href="https://cdn.discordapp.com/attachments/143149937247387649/604106240695599124/AtlusFlowScriptExtractorOutput.zip">you can get one here</a>.
-						<h2>Compiling</h2>
+<br />Likewise, you can also convert <b>.BMD</b> to <b>.MSG</b> for easy reading and editing.
+<br />If you're looking for a full dump of P5's scripts for reference, <a href="https://cdn.discordapp.com/attachments/143149937247387649/604106240695599124/AtlusFlowScriptExtractorOutput.zip">you can get one here</a>.
+<h2>Compiling</h2>
 						To turn <b>.FLOW</b> files back into <b>.BF</b>, or <b>.MSG</b> files back into <b>.BMD</b>, be sure to <a href="https://amicitia.github.io/docs/compiling">read this guide</a>.
-						<br><br />Below is an example of a custom flowscript that uses <b>Persona 5 (PS3)</b>'s scripting functions.
-						<br><h2>Sample Script</h2>
+<br>
+<br />Below is an example of a custom flowscript that uses <b>Persona 5 (PS3)</b>'s scripting functions.
+<br>
+<h2>Sample Script</h2>
 <pre><code class="c#">// Import the MessageScript into the script
 import( "TestScript2.msg" );
 // Constants can be defined with the const modifier
@@ -81,9 +54,6 @@ enum PadButton
 }
 <br>...
 </code></pre>
-					</div>
-				</div>
 			</td>
 		</tr>
 	</table>
-</div>
