--- a/Templates/Misc/404.html
+++ b/Templates/Misc/404.html
@@ -1,2 +1,1 @@
-<center><a href="https://www.youtube.com/watch?v=FZ0cqpXL9EE&amp;list=PLU6By7bu-RSvtk9aDlYplr73lfwpT2fFM&amp;index=1"><img src="https://amicitia.github.io/images/404.jpg" alt="yes of course I'm shilling vinesauce"></a></center>
-					<br>
+﻿<br><br><center><a href="https://www.youtube.com/watch?v=FZ0cqpXL9EE&amp;list=PLU6By7bu-RSvtk9aDlYplr73lfwpT2fFM&amp;index=1"><img src="https://amicitia.github.io/images/404.jpg"></a><br><br><b><a href="https://amicitia.github.io/">Go Back</a></b></center>
