Generate blog layout automatically

--- a/Templates/Forum/overall_header.html
+++ b/Templates/Forum/overall_header.html
@@ -80,8 +80,8 @@
 <center>
 	<a href="https://shrinefox.com/forum">
 		<img src="https://amicitia.github.io/images/logo.svg" style="width:150px;height:150px;">
-		<br><h1>Amicitia</h1>
-		<h2>Forum</h2>
+		<br><h1>ShrineFox</h1>
+		<h2>Blog</h2>
 	</a>
 </center>
 </div>
